[tool.poetry]
name = "down-status-td"
version = "0.1.0"
description = "Td Down status alert"
authors = ["Anderson F Lima <andersonfaustinolima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
